# jsx-rust

./: .gitignore  Cargo.toml  how_to.txt  index.html  run.sh  watch.sh
helper_macros/: Cargo.toml
helper_macros/src/: lib.rs
jsx/: Cargo.toml  lib.rs  thoughts.md
jsx/src/: attribute.rs  element.rs  lib.rs  mount.rs  signal.rs
jsx/src/attribute/: attribute.rs  mod.rs  parse.rs  path.rs  tokenize.rs
jsx/src/element/: element.rs  mod.rs  parse.rs  path_element.rs  tokenize.rs
jsx/src/for_each/: mod.rs
jsx/src/updateable/: mod.rs  updateable.rs
jsx/src/utils/: append_to_element.rs  get_name.rs  into_element_array.rs  into_element_option.rs  mod.rs
jsx_macros/: Cargo.toml
jsx_macros/src/: component.rs  lib.rs  view.rs
src/: app.rs  benchmark.rs  component.rs  lib.rs  main.rs
