[package]
name = "jsx-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsx = { path = "./jsx" }
jsx_macros = { path = "./jsx_macros" }

[workspace]
members = [
  "jsx",
  "jsx_macros",
  "helper_macros",
]
