[package]
name = "jsx-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsx = { path = "./jsx" }
jsx_macros = { path = "./jsx_macros" }
wasm-bindgen = "0.2.74"

[workspace]
members = [
  "jsx",
  "jsx_macros",
]

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
]
