[package]
name = "jsx-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsx = { path = "./jsx" }
jsx_macros = { path = "./jsx_macros" }
wasm-bindgen = "0.2.74"
js-sys = "0.3.64"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[workspace]
members = ["jsx", "jsx_macros"]

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
  'console',
  'EventListener',
  'Event',
]
