[package]
name = "jsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.56"
syn = { version = "2.0.15", features = ["full"] }
wasm-bindgen = "0.2.74"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Text',
]
