[package]
name = "jsx_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
jsx = { path = "../jsx" }

[lib]
proc-macro = true
